test/scc/expr/semantic-errors/048.t
void test()
{
    void* a;
    a + 1.0;
}